--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.13",
+    "react-slick": "^0.17.1",
+    "react-swipeable-views": "^0.12.12",
+    "react-swipeable-views-utils": "^0.12.11",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.3",
+    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "select2": "^4.0.3",
-    "redux-logger": "^3.0.6"        
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,9 +55,9 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
-    "npm-run-all": "^4.1.2",
-    "prettier": "^1.10.2",
     "less": "^2.7.3",
-    "less-watch-compiler": "^1.11.0"  
+    "less-watch-compiler": "^1.11.0",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.10.2"
   }
 }
