--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.13",
+    "react-select": "^1.2.1",
     "react-slick": "^0.17.1",
     "react-swipeable-views": "^0.12.12",
     "react-swipeable-views-utils": "^0.12.11",
