Securisation par accès Url, sans verification de modif du token pour le lien

--- a/.eslintrc
+++ b/.eslintrc
@@ -60,6 +60,7 @@
                 },
                 "allowChildren": false
             }
-        ]
+        ],
+        "no-console": "off"
     }
 }
