--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.34.1",
+    "history": "^4.7.2",
     "jquery": "^3.2.1",
     "jquery-slimscroll": "^1.3.8",
     "jquery-validation": "^1.17.0",
@@ -26,6 +27,7 @@
     "react-headroom": "^2.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^1.0.13",
     "react-select": "^1.2.1",
     "react-slick": "^0.17.1",
