--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-headroom": "^2.2.2",
+    "react-loader-spinner": "^1.4.7",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
