creation des HOC et refactoring des Dumb component

--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,8 @@
             2,
             {
                 "components": [
-                    "Label"
+                    "Label",
+                    "InputDescriptor"
                 ],
                 "required": {
                     "every": [
