--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint src",
+    "lint": "node node_modules/eslint-watch/bin/esw -w --fix eslint src",
     "build-css": "less-watch-compiler --run-once --source-map  src/Ui/assets/less/_main_full  src/Ui/assets/css",
     "watch-css": "npm run build-css && less-watch-compiler src/Ui/assets/less/_main_full  src/Ui/assets/css"
   },
@@ -59,6 +59,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
+    "eslint-watch": "^3.1.3",
     "less": "^2.7.3",
     "less-watch-compiler": "^1.11.0",
     "npm-run-all": "^4.1.2",
