--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.34.1",
+    "google-libphonenumber": "^3.1.0",
     "history": "^4.7.2",
     "jquery": "^3.2.1",
     "jquery-slimscroll": "^1.3.8",
