--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.34.1",
-    "google-libphonenumber": "^3.1.0",
     "history": "^4.7.2",
     "jquery": "^3.2.1",
     "jquery-slimscroll": "^1.3.8",
     "jquery-validation": "^1.17.0",
     "js-cookie": "^2.1.4",
+    "libphonenumber-js": "^1.0.24",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -41,8 +41,7 @@
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "select2": "^4.0.3",
-    "slick-carousel": "^1.8.1",
-    "validator": "^9.4.1"
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
