--- a/.eslintrc
+++ b/.eslintrc
@@ -47,23 +47,14 @@
                 "ignoreReadBeforeAssign": false
             }
         ],
-        "jsx-a11y/label-has-for": [
-            2,
-            {
-                "components": [
-                    "Label",
-                    "InputDescriptor"
-                ],
-                "required": {
-                    "every": [
-                        "nesting",
-                        "id"
-                    ]
-                },
-                "allowChildren": false
-            }
-        ],
-      "react/no-unused-prop-types": [1],  
+        "jsx-a11y/label-has-for": [ 2, {
+          "components": [ "Label" ],
+            "required": {
+                "every": [ "nesting", "id" ]
+            },
+            "allowChildren": false          
+      }],
+      "react/no-unused-prop-types": [1],
       "no-console": "off",
       "arrow-parens": [
         "error",
@@ -72,7 +63,7 @@
       "arrow-body-style": [
         2,
         "as-needed"
-      ],      
+      ],
       "class-methods-use-this": 0,
       "import/imports-first": 0,
       "import/newline-after-import": 0,
